# my_portfolio

./: .gitignore  LICENSE  Makefile  README.md  app.sqlite3  docker-compose.docs.yml  portfolio.sqlite3  pyproject.toml
app/company/: models.py  urls.py  views.py
app/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
app/loginActivities/: apps.py  tables.py  urls.py  views.py
app/templates/: base.html
app/templates/loginactivities/: loginactivities_list.html
app/users/: middlewares.py  models.py  views.py
app/users/api/: serializers.py  views.py
app/users/migrations/: 0001_initial.py
app/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_urls.py  test_views.py
app/utils/: helpers.py
config/: api_router.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst
docs/pycharm/: configuration.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt  production.txt
